Created a new AllScores activity and added an allsores class which holds all the scoredequations and is now written to disk;

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,8 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.opensoftware.apnan.speedmathopensource.IntroActivity" />
         </activity>
-        <activity android:name=".ScoreActivity"></activity>
+        <activity android:name=".ScoreActivity" />
+        <activity android:name=".AllScoresActivity"></activity>
     </application>
 
 </manifest>
