added an activity to display the saved games

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,8 @@
                 android:value="com.opensoftware.apnan.speedmathopensource.IntroActivity" />
         </activity>
         <activity android:name=".ScoreActivity" />
-        <activity android:name=".AllScoresActivity"></activity>
+        <activity android:name=".AllScoresActivity" />
+        <activity android:name=".SavedGamesActivity"></activity>
     </application>
 
 </manifest>
